observabilidade/test-traefik/Traefik/serviceexternalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: traefik-hub
spec:
  type: ExternalName
  externalName: nginx-service.dev.svc.cluster.local
